projects/vb6parse/snapshots/tests/library/financial/nper/nper_function_return.snap
---
source: projects/vb6parse/tests/library/financial/nper.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: CalculatePayoffMonths
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: loan
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: DoubleKeyword
              text: Double
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: payment
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: DoubleKeyword
              text: Double
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Identifier
              text: rate
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: DoubleKeyword
              text: Double
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DoubleKeyword
          text: Double
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: CalculatePayoffMonths
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: NPer
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: rate
                                - kind: Whitespace
                                  text: " "
                                - kind: DivisionOperator
                                  text: /
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "12"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: UnaryExpression
                              children:
                                - kind: SubtractionOperator
                                  text: "-"
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: payment
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: loan
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
